# uaml

./: .gitignore  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  eslint.config.mjs  package.json  pnpm-lock.yaml  render.yaml
.claude/skills/handoff/: SKILL.md
.claude/skills/ship-overnight/: SKILL.md
.claude/workflows/: implement-plan.js
.github/workflows/: ci.yml
crates/uaml/: Cargo.toml
crates/uaml-cli/: Cargo.toml
crates/uaml-cli/src/: commands.rs  io.rs  main.rs  ops_dto.rs
crates/uaml-cli/src/lsp/: bundle.rs  map.rs  mod.rs  server.rs
crates/uaml-cli/tests/: cli_e2e.rs
crates/uaml-ops-dto/: Cargo.toml
crates/uaml-wasm/: Cargo.toml
crates/uaml-wasm/src/: lib.rs
crates/uaml-wasm/tests/: native.rs
crates/uaml/src/: diagnostic.rs  frontmatter.rs  grammar.rs  layout.rs  lib.rs  model.rs  multiplicity.rs  okf.rs  parse.rs  serialize.rs  syntax.rs  validate.rs
crates/uaml/src/ops/: mod.rs  pkg.rs  rename.rs
crates/uaml/src/solve/: resolve.rs
crates/uaml/tests/: golden.rs  ops_golden.rs  serde_shape.rs
crates/uaml/tests/fixtures/: orders-domain.md
crates/waml-cli/src/: commands.rs  main.rs
crates/waml-cli/tests/: lsp_e2e.rs
crates/waml-editor/: Cargo.toml
crates/waml-editor/resources/fonts/: .gitignore
crates/waml-editor/src/: action_link.rs  app.rs  app_menu.rs  attr_row.rs  canvas.rs  caption_button.rs  class_diagram_view.rs  classifier_preview_view.rs  cli.rs  config.rs  conflict_badge.rs  diagram_switcher.rs  doc_tabs.rs  doc_view.rs  draw_hud.rs  fonts.rs  fps_meter.rs  frame.rs  icons.rs  inspector.rs  inspector_panel.rs  load.rs  logo.rs  main.rs  nav.rs  node_design_editor.rs  node_style.rs  panel_glass.rs  radial.rs  radial_popup.rs  recent_row.rs  ref_card.rs  scene.rs  section_heading.rs  selection_toolbar.rs  shortcuts_overlay.rs  sizing.rs  start_screen.rs  statusbar.rs  tool_dock.rs  (+3 more)
crates/waml-editor/src/card/: mod.rs
crates/waml-editor/src/popup/: conflict_list.rs  menu.rs  mod.rs  presenter.rs  radial.rs  root.rs  select.rs
crates/waml-editor/tests/: README.md
crates/waml-editor/tests/fixtures/mini/: customer.md  order.md  orders-diagram.md  payment-gateway.md
crates/waml-editor/tests/fixtures/sixkind/: car.md  drivable.md  driver.md  engine.md  fuel.md  index.md  sixkind-diagram.md  vehicle.md  wheel.md
crates/waml-ops-dto/: Cargo.toml
crates/waml-ops-dto/src/: lib.rs
crates/waml-wasm/: Cargo.toml
crates/waml-wasm/src/: lib.rs
crates/waml/src/: diagnostic.rs  grammar.rs  index_md.rs  layout.rs  lib.rs  model.rs  okf.rs  parse.rs  seed.rs  serialize.rs  syntax.rs  wire.rs  (+1 more)
docs/: okf-uml.md  uaml-spec.md
docs/design/: hud-button-mock.html  hud-edges-mock.html  hud-inspector-mock.html  hud-menu-mock.html  hud-node-design-mock.html  hud-node-mock.html  svg-sdf-harness.md
scripts/: build-wasm.mjs  gen-hero-hash.ts  gen-template-bundles.mjs  run-native.ps1  run-native.sh
supabase/migrations/: 0001_models.sql  0002_model_versions.sql
(+113 files in other folders)
