[package]
name = "uaml-cli"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Command-line tools (check, fmt) for UAML documents."

[[bin]]
name = "uaml"
path = "src/main.rs"

[dependencies]
uaml = { path = "../uaml" }
uaml-ops-dto = { path = "../uaml-ops-dto" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-lsp = { workspace = true }
