[package]
name = "uaml-ops-dto"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Serde wire contract (OpDto) for UAML ops, shared by CLI and WASM."

[dependencies]
uaml = { path = "../uaml" }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
