[package]
name = "uaml-wasm"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WASM bindings for the UAML core (parse/model/validate/ops)."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uaml = { path = "../uaml", features = ["serde"] }
uaml-ops-dto = { path = "../uaml-ops-dto" }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
