[package]
name = "uaml"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core library for parsing, serializing, and validating UAML documents."

[dependencies]
regex.workspace = true
pulldown-cmark.workspace = true
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
serde_json = { workspace = true }
